<resources>
    <string name="app_name">Wahana Mobile</string>
    <string name="google_map_key">AIzaSyAZwqU0H1Fxb8-hGj6t1fKKW984Qam9UY0</string>
    <string name="default_text_ps">180PS</string>
    <string name="separator">/</string>
    <string name="default_text_kws">120kW</string>
    <string name="version">Version</string>
    <string name="versi">1.7.1</string>
    <string name="timeout">180000</string>
    <string name="versinew">1.7.0</string>
    <string name="partnerid">androidoops</string>
    <string name="versionpu">v6</string>
    <string name="main_kode_agen"><u>KODE AGEN</u></string>
    <string name="main_manifest"><u>NOMOR MANIFEST</u></string>
    <string name="main_kode_verifikasi"><u>KODE VERIFIKASI</u></string>
    <string name="input_nik_label"><u>NIK KURIR</u></string>
    <string name="input_via"><u>VIA JALAN KURIR</u></string>
    <string name="input_namapenerus">Nama Penerus</string>
    <string name="input_via_angkutan"><u>VIA ANGKUTAN</u></string>
    <string name="input_via_jalan_sm_label"><u>VIA JALAN SURAT MUATAN</u></string>
    <string name="main_track_shipping"><u>TRACK SHIPPING</u></string>
    <string name="main_result_tracking"><u>TRACKING</u></string>
    <string name="kode_sortir_label">KODE SORTIR</string>
    <string name="nomor_kode_ttk">KODE SORTIR</string>
    <string name="main_tipe_absen_label">TIPE ABSEN</string>
    <string name="no_ttk_label">NO TTK</string>
    <string name="kode_koli_label">JUMLAH KOLI</string>
    <string name="main_foto_diri_label">FOTO DIRI</string>
    <string name="main_foto_ttk">FOTO</string>
    <string name="main_status_terkirim"><u>STATUS TERKIRIM</u></string>
    <string name="main_status_belum_terkirim"><u>STATUS BELUM TERKIRIM</u></string>
    <string name="main_nik_supir"><u>NIK SUPIR</u></string>
    <string name="download_Pdf">Download pdf</string>
    <string name="download_Doc">Download Doc</string>
    <string name="download_zip">Download Zip</string>
    <string name="download_video">Download Video</string>
    <string name="download_mp3">Download MP3</string>
    <string name="openFolder">Open Downloaded Folder</string>
    <string name="downloadStarted">Download Started…</string>
    <string name="downloadCompleted">Download Completed…</string>
    <string name="downloadFailed">Download Failed…</string>
    <string name="downloadAgain">Download Again</string>
    <string-array name="menuutama">
        <item>wahana_mydetail</item>
        <item>wahana_absensi</item>
        <item>wahana_cek_tarif</item>
        <item>wahana_cari_agen</item>
        <item>wahana_customer_service</item>
        <item>wahana_about_us</item>
    </string-array>
    <string-array name="menuops">
        <item>wahana_absensi</item>
        <item>wahana_myttk</item>
        <item>wahana_mydetail</item>
        <item>wahana_mydetail</item>
        <item>wahana_mydetail</item>
        <item>wahana_mydetail</item>
        <item>wahana_mydetail</item>
        <item>wahana_mydetail</item>
        <item>wahana_mydetail</item>
        <item>wahana_mydetail</item>
    </string-array>
    <string-array name="judulpelaksanadelivery">
        <item>AKTIVITAS KARYAWAN</item>
        <item>Sisa Paket</item>
        <item>TTK Terkirim</item>
        <item>TTK Belum Terkirim</item>
        <item>Absensi</item>
        <item>Cek Tarif</item>
        
        
        
        
    </string-array>
    <string-array name="judulpelaksanates">
        <item>AKTIVITAS KARYAWAN</item>
        <item>Sisa Paket</item>
        <item>TTK Terkirim</item>
        <item>TTK Belum Terkirim</item>
        <item>Absensi</item>
    </string-array>
    <string-array name="menupelaksanadelivery">
        <item>wahana_mydetail</item>
        <item>wahana_sisa</item>
        <item>wahana_myttk</item>
        <item>wahana_myttk</item>
        <item>wahana_absensi</item>
        <item>wahana_cek_tarif</item>
        
        
        
    </string-array>
    <string-array name="menupelaksanates">
        <item>wahana_mydetail</item>
        <item>wahana_sisa</item>
        <item>wahana_myttk</item>
        <item>wahana_myttk</item>
        <item>wahana_absensi</item>
    </string-array>
    <string-array name="judulpelaksanapickup">
        <item>AKTIVITAS KARYAWAN</item>
        <item>Pick Up</item>
        <item>CEK TARIF</item>
        <item>Absensi</item>
        <item>CUSTOMER SERVICE</item>
        <item>ABOUT US</item>
        
        
        
        
    </string-array>
    <string-array name="menupelaksanapickup">
        <item>wahana_mydetail</item>
        <item>wahana_pickup</item>
        <item>wahana_cek_tarif</item>
        <item>wahana_absensi</item>
        <item>wahana_customer_service</item>
        <item>wahana_about_us</item>
        
        
    </string-array>
    <string-array name="judulpelaksanaproseschecker">
        <item>AKTIVITAS KARYAWAN</item>
        <item>SORTING CENTRE</item>
        <item>Absensi</item>
        <item>CEK TARIF</item>
        <item>CUSTOMER SERVICE</item>
        <item>ABOUT US</item>
        
        
        
        
    </string-array>
    <string-array name="menupelaksanaproseschecker">
        <item>wahana_mydetail</item>
        <item>wahana_pickup</item>
        <item>wahana_absensi</item>
        <item>wahana_cek_tarif</item>
        <item>wahana_customer_service</item>
        <item>wahana_about_us</item>
        
        
    </string-array>
    <string-array name="judulpelaksanaprosessortir">
        <item>AKTIVITAS KARYAWAN</item>
        <item>GATEWAY</item>
        <item>BUAT MANIFEST SORTIR</item>
        <item>STSM</item>
        <item>STMS</item>
        <item>BUAT MA</item>
        <item>Absensi</item>
        <item>ABOUT US</item>
        
        
        
        
    </string-array>
    <string-array name="menupelaksanaprosessortir">
        <item>wahana_mydetail</item>
        <item>wahana_mydetail</item>
        <item>wahana_mydetail</item>
        <item>wahana_mydetail</item>
        <item>wahana_mydetail</item>
        <item>wahana_mydetail</item>
        <item>wahana_absensi</item>
        <item>wahana_about_us</item>
        
        
    </string-array>
    <string-array name="judulsupervisordelivery">
        <item>ABSENSI</item>
        <item>AKTIVITAS KARYAWAN</item>
        <item>TANDAI RETUR</item>
        <item>TTK</item>
        <item>KANTOR DELIVERY</item>
        <item>BUAT STK</item>
        <item>BUAT MANIFEST SORTIR</item>
        <item>STSM</item>
        <item>STMS</item>
        <item>BUAT MA</item>
        <item>BUAT SJ</item>
        <item>Buat SJP</item>
        <item>TTK TERKIRIM</item>
        <item>TTK BELUM TERKIRIM</item>
        <item>STBT</item>
        <item>ABOUT US</item>
    </string-array>
    <string-array name="menusupervisordelivery">
        <item>wahana_absensi</item>
        <item>wahana_mydetail</item>
        <item>wahana_mydetail</item>
        <item>wahana_mydetail</item>
        <item>wahana_mydetail</item>
        <item>wahana_mydetail</item>
        <item>wahana_mydetail</item>
        <item>wahana_mydetail</item>
        <item>wahana_mydetail</item>
        <item>wahana_mydetail</item>
        <item>wahana_mydetail</item>
        <item>wahana_mydetail</item>
        <item>wahana_myttk</item>
        <item>wahana_myttk</item>
        <item>wahana_mydetail</item>
        <item>wahana_about_us</item>
        
        
    </string-array>
    <string-array name="judulsupervisorpickup">
        <item>ABSENSI</item>
        <item>AKTIVITAS KARYAWAN</item>
        <item>LAPORAN BIAYA</item>
        <item>TTK</item>
        <item>MONITORING</item>
        <item>OPERASIONAL</item>
        <item>INFORMASI LAPORAN</item>
        <item>ABOUT US</item>
    </string-array>
    <string-array name="menusupervisorpickup">
        <item>wahana_absensi</item>
        <item>wahana_mydetail</item>
        <item>wahana_mydetail</item>
        <item>wahana_mydetail</item>
        <item>wahana_mydetail</item>
        <item>wahana_mydetail</item>
        <item>wahana_mydetail</item>
        <item>wahana_about_us</item>
    </string-array>
    <string-array name="judulsupervisorproses">
        <item>AKTIVITAS KARYAWAN</item>
        <item>GATEWAY</item>
        <item>BUAT MANIFEST SORTIR</item>
        <item>BUAT MA</item>
        <item>STSM</item>
        <item>STMS</item>
        <item>Absensi</item>
        <item>ABOUT US</item>
    </string-array>
    <string-array name="menusupervisorproses">
        <item>wahana_mydetail</item>
        <item>wahana_mydetail</item>
        <item>wahana_mydetail</item>
        <item>wahana_mydetail</item>
        <item>wahana_mydetail</item>
        <item>wahana_mydetail</item>
        <item>wahana_absensi</item>
        <item>wahana_about_us</item>
        
        
    </string-array>
    <string-array name="judulpelaksanapickupdelivery">
        <item>AKTIVITAS KARYAWAN</item>
        <item>Sisa Paket</item>
        <item>TTK Terkirim</item>
        <item>TTK Belum Terkirim</item>
        <item>Absensi</item>
        <item>Pickup</item>
        
        
        
        
    </string-array>
    <string-array name="menupelaksanapickupdelivery">
        <item>wahana_mydetail</item>
        <item>wahana_sisa</item>
        <item>wahana_myttk</item>
        <item>wahana_myttk</item>
        <item>wahana_absensi</item>
        <item>wahana_pickup</item>
        
        
        
    </string-array>
    <string-array name="menusaldo">
        <item>wahana_sisa</item>
        <item>wahana_mydetail</item>
        <item>wahana_cari_agen</item>
    </string-array>
    <string-array name="judulsaldo">
        <item>SISA SALDO ANDA</item>
        <item>TOP UP SALDO</item>
        <item>DETAIL TRANSAKSI</item>

    </string-array>
    <string-array name="judulutama">
        <item>AKTIVITAS KARYAWAN</item>
        <item>ABSENSI</item>
        <item>CEK TARIF</item>
        <item>CARI AGEN</item>
        <item>CUSTOMER SERVICE</item>
        <item>ABOUT US</item>

    </string-array>
    <string-array name="juduluser">
        <item>BUAT PRA TTK</item>

        <item>TOP UP SALDO ANDA</item>
        <item>MY TTK</item>
        <item>CEK TARIF</item>
        <item>CARI AGEN</item>
        <item>PENGAJUAN AGEN</item>
        <item>CUSTOMER SERVICE</item>
        <item>ABOUT US</item>
    </string-array>
    <string-array name="menuuser">
        <item>wahana_myttk</item>
        <item>wahana_sisa</item>
        <item>wahana_myttk</item>
        <item>wahana_cek_tarif</item>
        <item>wahana_cari_agen</item>
        <item>wahana_myttk</item>
        <item>wahana_customer_service</item>
        <item>wahana_about_us</item>
    </string-array>
    <string-array name="menusales">
        <item>wahana_cari_agen</item>
        <item>wahana_cek_tarif</item>
        <item>wahana_mydetail</item>
        <item>wahana_customer_service</item>
        <item>wahana_about_us</item>
    </string-array>
    <string-array name="judulsales">
        <item>PENGAJUAN AGEN</item>
        <item>CEK TARIF</item>
        <item>ABSENSI</item>
        <item>CUSTOMER SERVICE</item>
        <item>ABOUT US</item>
    </string-array>
    <string name="tanggal_jam_isi">16:00:00</string>
    <string name="calendar_isi">  01/05/06</string>
    <string name="pengisi_absensi_isi">123 radit</string>
    <string name="selamat_label_1">AKUN ANDA BERHASIL KAMI BUAT DENGAN USERNAME</string>
    <string name="selamat_label_2">08081988111</string>
    <string name="selamat_label_3">KAMI TELAH MENGIRIMKAN EMAIL UNTUK VERIFIKASI AKUN BARU ANDA. SILAHKAN CEK EMAIL ANDA.</string>
    <string name="input_id_agen"><u>UPDATE AGEN</u></string>
    <string name="id_agen_label">Masukkan ID agen</string>
</resources>