<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    android:id="@+id/drawer_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:translationZ="100dp"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#eeeeee"
    android:clipChildren="false"
    >
    <com.wahana.wahanamobile.VerticalScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#eeeeee"

        xmlns:android="http://schemas.android.com/apk/res/android">
        <android.support.design.widget.CoordinatorLayout
            android:id="@+id/main_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <android.support.design.widget.AppBarLayout
                android:id="@+id/appbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

                <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/toolbar_height"
                    android:background="@color/material_yellow"
                    android:textAlignment="center"
                    android:layout_gravity="center"
                    app:layout_scrollFlags="enterAlways"
                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

            </android.support.design.widget.AppBarLayout>

            <RelativeLayout
                android:id="@+id/layout_form"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:layout_width="match_parent"
                android:layout_height="620dp"
                android:orientation="vertical"
                android:translationZ="100dp">
                <RelativeLayout
                    android:id="@+id/info_layout"
                    android:layout_marginTop="@dimen/margin_toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:translationZ="100dp"
                    android:padding="15dp"
                    android:layout_marginLeft="@dimen/margin_root"
                    android:layout_marginRight="@dimen/margin_root"

                    android:orientation="vertical"
                    android:background="@drawable/rounded_layout"
                    >
                    <TableLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentTop="true"
                        >
                        <TableRow>
                            <ImageView
                                android:id="@+id/calendar_label"
                                android:layout_margin="@dimen/margin_absensi_form"
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                android:src="@drawable/calendar_icon"
                                android:textColor="@color/primary_dark"
                                />
                            <TextView
                                android:id="@+id/calendar_isi"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_margin="@dimen/margin_absensi_form"
                                android:textColor="@color/headermain_textcolor"
                                android:text="@string/calendar_isi"
                                android:textSize="16sp"/>
                        </TableRow>
                        <TableRow>
                            <ImageView
                                android:id="@+id/tanggal_jam_label"
                                android:layout_margin="@dimen/margin_absensi_form"
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                android:src="@drawable/time_icon"
                                android:textColor="@color/primary_dark"/>
                            <TextView
                                android:id="@+id/tanggal_jam_isi"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_margin="@dimen/margin_absensi_form"
                                android:textColor="@color/headermain_textcolor"
                                android:text="@string/tanggal_jam_isi"
                                android:textSize="16sp"/>
                        </TableRow>

                    </TableLayout>
                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        >
                        <TableLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">
                            <TableRow>

                                <ImageView
                                    android:id="@+id/kurir_label"
                                    android:layout_margin="@dimen/margin_absensi_form"
                                    android:layout_width="30dp"
                                    android:layout_height="30dp"
                                    android:src="@drawable/people_icon"
                                    android:textColor="@color/primary_dark"/>
                                <TextView
                                    android:id="@+id/pengisi_isi"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_margin="@dimen/margin_absensi_form"
                                    android:textColor="@color/headermain_textcolor"
                                    android:text="@string/pengisi_absensi_isi"
                                    android:textSize="16sp"/>
                            </TableRow>
                        </TableLayout>
                    </RelativeLayout>
                </RelativeLayout>
                <RelativeLayout
                    android:id="@+id/main_layout"
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:translationZ="100dp"
                    android:padding="15dp"
                    android:layout_marginLeft="@dimen/margin_root"
                    android:layout_marginRight="@dimen/margin_root"
                    android:layout_marginBottom="@dimen/margin_root"
                    android:orientation="vertical"
                    android:background="@drawable/rounded_layout"
                    android:layout_below="@+id/info_layout"
                    >
                    <TableLayout
                        android:id="@+id/table_terkirim"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                        <TableRow>
                            <TextView
                                android:id="@+id/judul_input_agen"
                                android:padding="5dp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_margin="@dimen/margin_absensi_form"
                                android:textColor="@color/headermain_textcolor"
                                android:text="@string/input_id_agen"
                                android:textSize="16sp"/>
                        </TableRow>
                    </TableLayout>

                    <EditText
                        android:id="@+id/input_id_agen"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:imeOptions="actionDone"
                        android:singleLine="true"
                        android:background="@drawable/background_input"
                        android:textColor="@color/main_textcolor"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:textColorHint="@color/headermain_textcolor"
                        android:hint="@string/id_agen_label"
                        android:layout_below="@+id/table_terkirim"
                        android:textSize="12sp"
                        />
                </RelativeLayout>
                <RelativeLayout
                    android:id="@+id/layout_bottom"
                    android:background="#222a2a"
                    android:translationZ="120dp"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:padding="10dp"
                    android:layout_alignParentBottom="true"
                    >
                    <com.wahana.wahanamobile.helper.ButtonPlus
                        style="@style/button"
                        android:id="@+id/input_button"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_width="300dp"
                        android:layout_height="48dp"
                        android:textSize="16sp"
                        android:background="@drawable/roundedbutton"
                        android:textColor="@color/white"
                        android:text="NEXT"/>
                </RelativeLayout>
            </RelativeLayout>

        </android.support.design.widget.CoordinatorLayout>

    </com.wahana.wahanamobile.VerticalScrollView>
    <ListView
        android:id="@+id/list_slidermenu"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:choiceMode="singleChoice"
        android:translationZ="100dp"
        app:headerLayout="@layout/nav_header"
        android:divider="#eeeeee"
        android:dividerHeight="1dp"
        android:listSelector="@drawable/list_selector"
        android:background="#142631"/>
</android.support.v4.widget.DrawerLayout>
