<?xml version="1.0" encoding="utf-8"?>
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="#eeeeee"
        android:clipChildren="false"
        xmlns:android="http://schemas.android.com/apk/res/android">
        <android.support.design.widget.CoordinatorLayout
            android:id="@+id/main_content"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"

            >

            <android.support.design.widget.AppBarLayout
                android:id="@+id/appbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

                <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/toolbar_height"
                    android:background="@color/white"
                    android:textAlignment="center"
                    android:layout_gravity="center"
                    app:layout_scrollFlags="enterAlways"
                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

            </android.support.design.widget.AppBarLayout>

            <RelativeLayout
                android:id="@+id/layout_form"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:layout_width="match_parent"
                android:layout_height="700dp"
                android:translationZ="100dp">
                <LinearLayout
                    android:id="@+id/info_layout"
                    android:layout_marginTop="@dimen/margin_toolbar"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:translationZ="100dp"
                    android:padding="15dp"
                    android:layout_marginLeft="@dimen/margin_root"
                    android:layout_marginRight="@dimen/margin_root"
                    android:layout_marginBottom="@dimen/margin_root"
                    android:orientation="vertical"
                    android:background="@drawable/rounded_layout"
                    >
                    <ImageView
                        android:id="@+id/selamat_image"
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:layout_alignParentLeft="true"
                        android:src="@drawable/selamat_icon"
                        >
                    </ImageView>
                    <TextView
                        android:id="@+id/text_selamat_opening"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentTop="true"
                        android:layout_marginTop="@dimen/margin_new"
                        android:textSize="12dp"
                        android:layout_gravity="center"
                        android:textAlignment="center"
                        android:src="@drawable/selamat_icon"


                        android:layout_below="@id/selamat_image"
                        android:textColor="#000000"
                        android:text="@string/selamat_label_1"
                        >
                    </TextView>
                    <TextView
                        android:id="@+id/text_selamat_nomor"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentTop="true"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:src="@drawable/selamat_icon"
                        android:layout_below="@id/selamat_image"
                        android:textColor="#000000"
                        android:text="@string/selamat_label_2"
                        android:textSize="18dp"
                        android:layout_gravity="center"
                        android:textAlignment="center"
                        android:background="@color/material_yellow"
                        >
                    </TextView>
                    <TextView
                        android:id="@+id/text_selamat_ending"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentTop="true"
                        android:layout_marginBottom="@dimen/margin_new"
                        android:src="@drawable/selamat_icon"
                        android:layout_below="@id/selamat_image"
                        android:textColor="#000000"
                        android:textSize="12dp"
                        android:layout_gravity="center"
                        android:textAlignment="center"
                        android:text="@string/selamat_label_3"
                        >
                    </TextView>
                    <com.wahana.wahanamobile.helper.ButtonPlus
                        style="@style/button"
                        android:id="@+id/btn_signup"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:layout_marginBottom="6dp"
                        android:background="@drawable/roundedbutton"
                        android:padding="12dp"
                        android:textSize="18sp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:textColor="@color/white"
                        android:text="OK"
                        android:onClick="OnClick"/>

                </LinearLayout>

            </RelativeLayout>

        </android.support.design.widget.CoordinatorLayout>
    </ScrollView>
